test/conformance/chainsaw/validating-admission-policy-reports/background/generated-reporting-opt-in/no-reports.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
(length(results[?policy == 'vpol-reporting-opt-in-vap']) > `0`): true
---
apiVersion: wgpolicyk8s.io/v1alpha2
kind: ClusterPolicyReport
(length(results[?policy == 'vpol-reporting-opt-in-vap']) > `0`): true
