test/conformance/chainsaw/validating-admission-policy-reports/background/generated-reporting-opt-in/policy-assert.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: reporting-opt-in-vap
status:
  conditionStatus:
    ready: true
